Fix body width to prevent horizontal scrollbar

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    width: 100vw;
+    width: 100%;
     font-family: "Poppins", sans-serif;
     background: linear-gradient(104.05deg, #030F19 -2.59%, #0B192C 110.84%);
     display: flex;
